testing oct2 theme

--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -9,8 +9,8 @@
 //$header-title-font-family: "Futura", sans-serif;
 //$header-subtitle-font-family: "Futura", sans-serif;
 
-$sans: "Lato", sans-serif;
-$serif: "Lato", sans-serif;
-$heading-font-family: 'Lato', sans-serif;
-$header-title-font-family: "League", Helvetica, Arial, sans-serif;
+//$sans: "Lato", sans-serif;
+//$serif: "Lato", sans-serif;
+//$heading-font-family: 'Lato', sans-serif;
+//$header-title-font-family: "League", Helvetica, Arial, sans-serif;
 
